<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/layout"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/image" />

    <TextView
        android:id="@+id/main_title"
        style="@style/text_white_bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_image"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/main_email"
        style="@style/edit_white_trans_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="5dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/main_password"
        style="@style/edit_white_trans_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_email"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:maxLength="12"/>

    <TextView
        android:id="@+id/main_forgot_password"
        style="@style/text_white_bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:text="Forgot Password" />
    <Button
        android:id="@+id/main_login"
        style="@style/button_green_bold_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_forgot_password"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"

        android:text="@string/login" />

    <TextView
        android:id="@+id/main_create_account"
        style="@style/text_white_bold_18"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-3dp"
        android:text="@string/create_account" />

</RelativeLayout>